--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,10 @@ Developers & Contributers
 - RaX
 
 -------------------------------------------------------------------------------------------
+- Rev 25-
+[2006/09/26] - Tsusai - Globals: Added GetMD5 function, to turn a string into a MD5 string.
+-
+
 - Rev 24-
 [2006/09/26] - RaX - Re-indented half of the files...too many to count...non-code-affecting
  change.
