--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,16 @@ Developers & Contributers
 - RaX
 
 -------------------------------------------------------------------------------------------
+- Rev 26-
+[2006/09/26] - Tsusai - Notes: Zone core uploaded. Non operational or called.
+[2006/09/26] - Tsusai - Character : Added ClientVersion to TCharacter.
+[2006/09/26] - Tsusai - PacketTypes : Imported TReadPts.
+[2006/09/26] - Tsusai - ServerOptions/WinLinux : Removed unneeded Units.
+[2006/09/26] - Tsusai - DatabaseTXT : Added unit to load .txt databases.
+[2006/09/26] - Tsusai - ZoneCore : Imported from Prometheus (yes..this is legal under GPL).
+[2006/09/26] - Tsusai - ZoneRecv : Added.
+-
+
 - Rev 25-
 [2006/09/26] - Tsusai - Globals: Added GetMD5 function, to turn a string into a MD5 string.
 -
